<resources>
    <string name="app_name">Mediam</string>
    <string name="title_home">Home</string>
    <string name="title_list">List</string>
    <string name="title_notifications">Notifications</string>
    <string name="input_media">Media</string>
    <string name="input_date">Datum</string>
    <string name="input_starttijd">Starttijd</string>
    <string name="input_eindtijd">Eindtijd</string>
    <string name="input_mening">Mening en Gedrag</string>
    <string name="send_btn">Opslaan</string>
</resources>
