<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#f5f5f5"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/center_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="8dp">

        <LinearLayout
            android:id="@+id/edit_text_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/container_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_top_bottom"
                android:paddingTop="@dimen/padding_top_bottom">

                <EditText
                    android:id="@+id/input_media"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/input_media"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/container_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/container_starttijd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/padding_top_bottom"
                    android:paddingTop="@dimen/padding_top_bottom">

                    <EditText
                        android:id="@+id/input_starttijd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/input_starttijd"
                        android:inputType="textCapSentences" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/container_einddtijd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/padding_top_bottom"
                    android:paddingTop="@dimen/padding_top_bottom">

                    <EditText
                        android:id="@+id/input_eindtijd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/input_eindtijd"
                        android:inputType="textCapSentences" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/container_mening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_top_bottom"
                android:paddingTop="@dimen/padding_top_bottom">

                <EditText
                    android:id="@+id/input_mening"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/input_mening"
                    android:inputType="textCapSentences" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/send_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/secondaryColor"
                android:text="@string/send_btn"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>